# 2022-cpl-coding-1

./: .gitignore  CMakeLists.txt  README.md  guess.c
0-intro/: CMakeLists.txt  hello.c
1-types-io/: CMakeLists.txt  README.md  admin-scanf.c  admin.c  circle.c  luo-input.md  luo-output.md  mol.c  sphere  sphere.c
10-double-pointers/: CMakeLists.txt  README.md  decl.c  echo-escaped.c  echo.c  game-of-life-pointer.c  integrate.c  merge.c  scores.c  scores.txt  selection-sort-strings.c  sort.c
11-struct/: CMakeLists.txt  README.md  musician.c
12-linkedlist/: CMakeLists.txt  README.md  josephus.c
12-linkedlist/ll/: ll.c  ll.h
2-if-for-array/: CMakeLists.txt  README.md  leap-else-if.c  leap-elseif.c  leap-if-else.c  leap.c  min-array-input.c  min-array.c  min-of-three.c  min-of-two.c
3-for-a-while/: CMakeLists.txt  README.md  binary-search.c  digits.c  numbers-sorted.md  numbers.md  palindrome.c  primes.c  selection-sort  selection-sort-numbers-sorting.md  selection-sort.c  stars.c
4-loops/: CMakeLists.txt  bubble-sort.c  game-of-life  game-of-life.c  merge.c
5-function/: CMakeLists.txt  README.md  binary-search.c  game-of-life-transformed.c  game-of-life.c  guess.c  leap.c  merge.c  palindrome.c  primes.c  selection-sort  selection-sort.c  stars.c
6-recursion/: CMakeLists.txt  README.md  bsearch-re.c  fib-array.c  fib-iter.c  fib-re.c  gcd-euclid-iter.c  gcd-euclid-re.c  gcd-euclidean-iter.c  gcd-euclidean-re.c  main-re  main-re.c  mergesort.c  min-re.c  min.c  sum-re.c
7-data-types/: CMakeLists.txt  README.md  char.c  compare.c  explict-conversion.c  float-limits.c  implicit-conversion.c  int-limits.c  int-overflow.c  loop.c  sum-product.c  timing.c  unsigned.c
8-pointers/: CMakeLists.txt  README.md  merge.c  radius.c  selection-sort  selection-sort.c
8-pointers-arrays/: README.md  selection-sort-numbers-sorted.md  selection-sort-numbers.md  selection-sort.c
9-more-pointers/: CMakeLists.txt  README.md  selection-sort-strings.c  strcmp.c  strcpy.c  strlen.c
9-pointers-c-strings/: strcpy.c  strlen.c
