cmake_minimum_required(VERSION 3.23)
project(2022_cpl_coding_1 C)

set(CMAKE_C_STANDARD 11)

add_subdirectory(0-intro)
add_subdirectory(1-types-io)
add_subdirectory(2-if-for-array)
add_subdirectory(3-for-a-while)
add_subdirectory(4-loops)
add_subdirectory(5-function)
add_subdirectory(6-recursion)
add_subdirectory(7-data-types)
add_subdirectory(8-pointers-arrays)
add_subdirectory(9-pointers-c-strings)
add_subdirectory(10-double-pointers)
add_subdirectory(11-struct)