add_executable(min-of-two min-of-two.c)
add_executable(min-of-three min-of-three.c)

add_executable(leap-if-else leap-if-else.c)
add_executable(leap-else-if leap-else-if.c)
add_executable(leap-elseif leap-elseif.c)
add_executable(leap leap.c)

add_executable(min-array min-array.c)
add_executable(min-array-input min-array-input.c)