add_executable(min min.c)
add_executable(min-re min-re.c)

add_executable(sum-re sum-re.c)

add_executable(fib fib-re.c)
add_executable(fib-array fib-array.c)
add_executable(fib-iter fib-iter.c)

add_executable(gcd-euclid-re gcd-euclid-re.c)
add_executable(gcd-euclid-iter gcd-euclid-iter.c)
add_executable(gcd-euclidean-iter gcd-euclidean-iter.c)
add_executable(gcd-euclidean-re gcd-euclidean-re.c)

add_executable(bsearch-re bsearch-re.c)

add_executable(mergesort mergesort.c)